# AQBot

./: .gitignore  .gitmodules  README-AR.md  README-DE.md  README-EN.md  README-ES.md  README-FR.md  README-HI.md  README-JA.md  README-KO.md  README-RU.md  README-ZH-TW.md  README.md  agents.md  cliff.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test-build.yml  test-windows-build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/gateway/: Cargo.toml
src-tauri/crates/gateway/src/: auth.rs  handlers.rs  lib.rs  middleware.rs  native.rs  realtime.rs  routes.rs  server.rs
src-tauri/src/: context_manager.rs  indexing.rs  lib.rs  main.rs  model_catalog_tools.rs  paths.rs  tray.rs  window_state.rs
src/__tests__/: App.d2.test.tsx
src/hooks/: useGlobalShortcutManager.ts  useKeyboardShortcuts.ts  useResolvedAvatarSrc.ts  useUpdateChecker.tsx  useVoiceChat.ts
src/i18n/: index.ts
src/lib/: browserMock.ts  chatMarkdown.ts  chatMultiModel.ts  convIcon.ts  drawingModels.ts  exportChat.ts  invoke.ts  ipc.ts  memoryUtils.ts  modelCapabilities.ts  modelParams.ts  perfTrace.ts  preloadChatRenderers.ts  providerDeepLink.ts  providerIcons.ts  providerIcons.tsx  reasoningProfile.ts  searchUtils.ts  shortcutActions.ts  shortcuts.ts
src/pages/: ChatPage.tsx  DrawingPage.tsx  FilesPage.tsx  GatewayPage.tsx  SettingsPage.tsx  SkillsPage.tsx
src/stores/: agentStore.ts  conversationStore.ts  drawingSettingsStore.ts  (+11 more)
(+292 files in other folders)
